<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.QRcodeScannerActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingTop="@dimen/dim_30_dp"
            android:paddingBottom="@dimen/dim_20_dp"
            android:paddingStart="@dimen/padding_margin_layout"
            android:paddingEnd="@dimen/padding_margin_layout">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/txt_house_no"
                    style="@style/MyEditTextStyleDark"
                    android:inputType="textCapWords"
                    android:hint="@string/house_number_hint"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/padding_margin_layout"
                    android:layout_marginEnd="@dimen/padding_margin_layout"
                    android:textSize="@dimen/button_text_size"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/submit_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="@dimen/padding_margin_layout_double"
        android:background="@drawable/rounded_orange_button"
        android:visibility="gone"/>

    <Button
        android:id="@+id/grant_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/dim_80_dp"
        android:textAllCaps="false"
        android:text="@string/grant_permission_txt"
        android:textColor="@color/colorDivider"
        android:textSize="@dimen/button_text_size"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_photo_camera_light_gray_50dp"
        android:elevation="@dimen/padding_margin_layout_double"
        android:visibility="gone"/>

    <include
        android:id="@+id/scanner_view"
        layout="@layout/content_qrcode_scanner"/>

</android.support.design.widget.CoordinatorLayout>