<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relative_bg"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/ic_login_vector"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/house_owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hyphen"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_30_sp"
                    android:layout_marginTop="@dimen/dim_30_dp"
                    android:gravity="center_horizontal"
                    android:layout_marginStart="@dimen/padding_margin_layout"
                    android:layout_marginEnd="@dimen/padding_margin_layout"/>
                <TextView
                    android:id="@+id/house_owner_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hyphen"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dim_10_dp"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:layout_below="@id/house_owner_name"/>

                <TextView
                    android:id="@+id/house_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hyphen"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dim_20_dp"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:layout_below="@id/house_owner_mobile"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/collection_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/garbage_collection_completed"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/dim_20_dp"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/dimen_30_sp"/>

            <ImageView
                android:id="@+id/response_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/padding_margin_layout_double"
                android:src="@drawable/ic_tick_inside_circle_green"/>

            <Button
                android:id="@+id/done_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_margin_layout_double"
                android:background="@drawable/rounded_orange_button"
                android:text="@string/done_txt"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"/>

        </LinearLayout>

</ScrollView>
